add possiblity to use a harmonic mean for sigma_ref & a new function
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/sl4bayesmeta@6 b1c1774c-e9a7-4141-b269-6dd821e7a813

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -6,6 +6,7 @@ importFrom("bayesmeta", "bayesmeta", "dhalfnormal", "dhalfcauchy", "dlomax",
 
 
 export(sensitivity_learning_table)
+export(sensitivity_learning_table_flexible)
 export(pri_par_adjust_dynamic)
 export(pri_par_adjust_static)
 export(effective_rlmc)
